# EnciclopediaDigitalDoRock

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/sql/: SolidBD.sql  enciclopedia_rock_db.sql
